# lslsub_plotter

./: .gitignore  .gitmodules  CMakeConfig.cmake  CMakeLists.txt  README.md  lslsub_plotter.pro
forms/: mainwindow.ui
include/: mainwindow.h
include/lsl/: lsl_cpp.h
script/: lslplot.m  lslplot_bis.m  plot_heatmap.py  plot_line.py  requirements.txt  vispy_script.py
script/liblsl-Matlab/: lslplot.m
src/: main.cpp  mainwindow.cpp
